# minionese

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cpu-inference.yml
artifacts/: manual_transcript.json
artifacts/data/: manifest.json
artifacts/final/: evaluation.json  manifest.json  model.json  tokenizer-metadata.json  tokenizer.json
configs/: model.json
docs/: PLAN.md  RESULTS.md
src/minionese/: __init__.py  cli.py  data.py  evaluation.py  generation.py  inference_torch.py  model.py  tokenizer.py  training.py
tests/: test_data.py  test_inference_torch.py  test_model.py
